Vehicle Insurance/src/objects/Qualified_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>owner&apos;s birthdate</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Car_Make__c</fullName>
        <label>Car_Make</label>
        <picklist>
            <picklistValues>
                <fullName>Hero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suzuki</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <label>Car Model</label>
        <picklist>
            <picklistValues>
                <fullName>Pleasure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_of_Registration__c</fullName>
        <label>City of Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Ahemdabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dehli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - Not Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working - Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Converted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>price of vehicle</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TwoWheelerMake__c</fullName>
        <label>TwoWheelerMake</label>
        <picklist>
            <picklistValues>
                <fullName>Ducati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mahindra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suzuki</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TwoWheelerModel__c</fullName>
        <label>TwoWheelerModel</label>
        <picklist>
            <picklistValues>
                <fullName>Avenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleasure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unicorn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two-Wheeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Duty Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_of_Vehicle_Registration__c</fullName>
        <label>Year of Vehicle Registration</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Qualified Lead</label>
    <nameField>
        <label>Qualified Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualified Lead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>